feat(autiva):重构智能体系统